# match-pattern

./: .gitignore  MIGRATING-0.3.md  MIGRATING-0.3.zh-CN.md  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  package.json
.github/workflows/: ci.yml  npm-publish.yml  release.yml  rust.yml
rs/: .npmignore  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  Cargo.toml  README.zh-CN.md
rs/docs/: wasm-compiler-match-architecture.md
rs/pkg/: LICENSE  README.md  match_pattern_rs.d.ts  match_pattern_rs.js  match_pattern_rs_bg.wasm  match_pattern_rs_bg.wasm.d.ts  package.json
rs/src/: compiler.rs  lib.rs  matcher.rs  parser.rs  types.rs  utils.rs
rs/tests/: browser.rs
scripts/: bump-version.mjs  rebuild-rs-pkg.sh  test-rs-wasm.sh  verify-rs-pkg.sh
ts/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  README.md  README.zh-CN.md  jest.config.js  package.json  tsconfig.json  tsconfig.typecheck.json  type-test.ts  vitest.config.ts  vitest.node.config.ts
ts/src/: advanced.ts  index.ts  types.ts
ts/src/internal/: ast.ts  cache.ts  compiler.ts  engine.ts  object.ts  predicate.ts  runtime.ts
ts/tests/: basic.node.test.ts  business.node.test.ts  compiler-parity.node.test.ts  engine.node.test.ts  match.browser.test.ts  match.node.test.ts  test.ts
ts/type-tests/: exhaustiveness.ts
