[package]
name = "match-pattern-rs"
version = "0.1.0"
edition = "2024"
author = "weiqu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
