[package]
name = "match-pattern-rs"
version = "0.3.0"
edition = "2024"
authors = ["weiqu"]
description = "Rust/WASM compiler package for the match-pattern monorepo."
license = "MIT"
repository = "https://github.com/DreamDrunker/match-pattern"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
